--- a/src/style/global.css
+++ b/src/style/global.css
@@ -1,13 +1,29 @@
-body {
+@import url('https://fonts.googleapis.com/css2?family=Cormorant+Unicase:wght@400;500;600;700&display=swap');
+
+*,
+*::after,
+*::before {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+html {
+  /* 
+        font-size: 16px; default
+        font-size: 10px; what we Want
+        10px / 16px = 0.625 = 62.5%
+        Percentage of users´s font-size settings
+    */
+
+  font-size: 62.5%;
+}
+
+body {
+  font-family: 'Cormorant Unicase', serif;
+  font-weight: var(--font-weight-regular);
+  background-color: var(--color-background);
+  color: var(--color-text-dark);
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
