add blur backdrop to header

--- a/src/style/variables.css
+++ b/src/style/variables.css
@@ -1,5 +1,6 @@
 :root {
   --color-background: #faf3f4;
+  --color-background-a80: rgba(250, 243, 244, 0.8);
 
   --color-text-dark: #1d0e07;
   --color-text-light: #fff;
