--- a/src/components/header/header.module.css
+++ b/src/components/header/header.module.css
@@ -7,6 +7,9 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
+
+  background-color: var(--color-background-a80);
+  backdrop-filter: blur(2px);
 }
 
 .heading {
