--- a/src/pages/landing/landing.module.css
+++ b/src/pages/landing/landing.module.css
@@ -1,5 +1,6 @@
 .container {
-  display: flex;
+  display: grid;
+  grid-template-columns: 75.9rem 1fr;
   align-items: center;
   gap: var(--spacing-9);
 
@@ -9,7 +10,7 @@
 
 .img {
   width: 70rem;
-  height: 100%;
+  height: 58.3rem;
   background-color: #444;
 
   border-radius: var(--boarder-radius);
@@ -17,18 +18,5 @@
 
 .heading {
   margin-bottom: var(--spacing-8);
-
-  font-size: var(--font-size-xxl);
-  font-weight: var(--font-weight-bold);
   text-transform: uppercase;
-}
-.text {
-  margin-bottom: var(--spacing-6);
-
-  font-size: var(--font-size-m);
-  font-weight: var(--font-weight-bold);
-}
-
-.text:last-of-type {
-  margin-bottom: var(--spacing-7);
 }
