--- a/src/style/global.css
+++ b/src/style/global.css
@@ -27,3 +27,19 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+
+h2 {
+  font-size: var(--font-size-xxl);
+  font-weight: var(--font-weight-bold);
+}
+
+.text {
+  margin-bottom: var(--spacing-6);
+
+  font-size: var(--font-size-m);
+  font-weight: var(--font-weight-bold);
+}
+
+.text:last-of-type {
+  margin-bottom: var(--spacing-7);
+}
