--- a/src/components/button/button.module.css
+++ b/src/components/button/button.module.css
@@ -12,6 +12,16 @@
   font-weight: var(--font-weight-bold);
 
   cursor: pointer;
+
+  transition: all 150ms ease-in-out;
+}
+
+.button:hover {
+  opacity: 0.8;
+}
+
+.button:active {
+  transform: scale(0.97);
 }
 
 .full {
