--- a/src/pages/about/about.module.css
+++ b/src/pages/about/about.module.css
@@ -6,13 +6,13 @@
 
   /* height: calc(100vh - var(--spacing-12)); */
   height: 100vh;
-  padding: var(--spacing-12) var(--spacing-11) var(--spacing-12) var(--spacing-11);
+  padding: calc(var(--spacing-12) * 2) var(--spacing-11) var(--spacing-12) var(--spacing-11);
 }
 
 .content {
   display: grid;
-  grid-template-columns: 54rem 1fr;
-  align-items: center;
+  grid-template-columns: 1fr 1.5fr;
+  align-items: flex-start;
   gap: var(--spacing-9);
 }
 
