set header active on page in vievport

--- a/src/components/header/header.module.css
+++ b/src/components/header/header.module.css
@@ -44,3 +44,7 @@
   color: var(--color-text-dark);
   font-weight: var(--font-weight-bold);
 }
+
+.activNavLink a {
+  text-decoration: underline;
+}
