add gallery layout

--- a/src/pages/contact/contact.module.css
+++ b/src/pages/contact/contact.module.css
@@ -4,3 +4,11 @@
   flex-direction: column;
   gap: var(--spacing-11);
 }
+
+.imgContainer {
+  height: 500px;
+  width: 500px;
+}
+.imgContainer img {
+  max-width: 100%;
+}
