--- a/src/style/global.css
+++ b/src/style/global.css
@@ -20,6 +20,9 @@ html {
   overflow-x: hidden;
   scroll-behavior: smooth;
 }
+html::-webkit-scrollbar {
+  display: none; /* Safari and Chrome */
+}
 
 body {
   font-family: 'Cormorant Unicase', serif;
