--- a/src/components/carousel/carousel.module.css
+++ b/src/components/carousel/carousel.module.css
@@ -13,11 +13,20 @@
 }
 
 .carousel {
-  position: relative;
+  display: grid;
+  grid-template-rows: 1fr 1rem;
   height: 500px;
   width: 600px;
+  border-radius: var(--boarder-radius);
 
   background-color: gray;
+  overflow: hidden;
+}
+
+.carouselContent {
+  position: relative;
+  height: 100%;
+  width: 100%;
 }
 
 .item {
@@ -49,11 +58,24 @@
   border-radius: 100%;
 
   background-color: var(--color-prime-light);
+  transition: all var(--animation-duration) ease-in-out;
+}
+
+.progessBar {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.progessBarItem {
+  height: 100%;
+  width: 100%;
+  background-color: var(--color-prime-light);
 
   transition: all var(--animation-duration) ease-in-out;
 }
 
-.progessItemActiv {
+.progessActiv {
   background-color: var(--color-prime);
   transition: all var(--animation-duration) ease-in-out;
 }
