--- a/src/pages/gallery/gallery.module.css
+++ b/src/pages/gallery/gallery.module.css
@@ -24,55 +24,54 @@
   overflow: hidden;
   transition: all 200ms ease-in-out;
 }
-.container div:hover {
-  transform: scale(1.07);
-  border-radius: var(--boarder-radius);
-}
 
 .container div > img {
   width: 100%;
   height: 100%;
   object-fit: cover;
   object-position: center;
+  overflow: hidden;
+}
+
+/* grow animation */
+/* .container div:hover {
+  transform: scale(1.07);
+  border-radius: var(--boarder-radius);
+} */
+
+/* zoom animation */
+.container div > img:hover {
+  transform: scale(1.07);
+  border-radius: var(--boarder-radius);
 }
 
 .img0 {
-  background-color: blue;
   grid-area: img0;
 }
 .img1 {
-  background-color: green;
   grid-area: img1;
 }
 .img2 {
-  background-color: yellow;
   grid-area: img2;
 }
 .img3 {
-  background-color: yellowgreen;
   grid-area: img3;
 }
 .img4 {
-  background-color: red;
   grid-area: img4;
 }
 .img5 {
-  background-color: palevioletred;
   grid-area: img5;
 }
 .img6 {
-  background-color: gray;
   grid-area: img6;
 }
 .img7 {
-  background-color: saddlebrown;
   grid-area: img7;
 }
 .img8 {
-  background-color: skyblue;
   grid-area: img8;
 }
 .img9 {
-  background-color: darkcyan;
   grid-area: img9;
 }
