--- a/src/components/carousel/carousel.module.css
+++ b/src/components/carousel/carousel.module.css
@@ -15,11 +15,10 @@
 .carousel {
   display: grid;
   grid-template-rows: 1fr auto;
-  height: 500px;
-  width: 600px;
+  height: 100%;
+  width: 100%;
   border-radius: var(--boarder-radius);
 
-  background-color: gray;
   overflow: hidden;
 }
 
