--- a/src/pages/portfolio/portfolio.module.css
+++ b/src/pages/portfolio/portfolio.module.css
@@ -2,8 +2,37 @@
   display: flex;
   align-items: center;
   flex-direction: column;
-  gap: var(--spacing-11);
+  justify-content: center;
+  gap: var(--spacing-8);
 
   height: 100%;
   width: 100%;
+}
+
+.portfolios {
+  width: 100%;
+  height: 100%;
+  padding: 0 var(--spacing-6);
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: var(--spacing-11);
+}
+.portfolio {
+  width: 100%;
+  height: 100%;
+  display: grid;
+  grid-template-rows: 1fr auto;
+  gap: var(--spacing-6);
+}
+
+.img {
+  width: 100%;
+  height: 100%;
+  background-color: gray;
+}
+
+.textContainer {
+  padding: 0 var(--spacing-6);
 }
