--- a/src/components/button/button.module.css
+++ b/src/components/button/button.module.css
@@ -5,7 +5,7 @@
   color: var(--color-text-light);
 
   border: none;
-  border-radius: var(--boarder-radius);
+  border-radius: var(--boarder-radius-s);
 
   font-family: inherit;
   font-size: var(--font-size-m);
