--- a/src/components/carousel/carousel.module.css
+++ b/src/components/carousel/carousel.module.css
@@ -17,7 +17,7 @@
   grid-template-rows: 1fr auto;
   height: 100%;
   width: 100%;
-  border-radius: var(--boarder-radius);
+  border-radius: var(--boarder-radius-m);
 
   overflow: hidden;
 }
