add label component

--- a/src/style/variables.css
+++ b/src/style/variables.css
@@ -7,6 +7,7 @@
 
   --color-prime: #cf8083;
   --color-prime-light: #f4cdce;
+  --color-secondary: #4a2918;
 
   --font-size-xxl: 4rem;
   --font-size-xl: 3.2rem;
