--- a/src/pages/contact/contact.module.css
+++ b/src/pages/contact/contact.module.css
@@ -3,12 +3,16 @@
   align-items: center;
   flex-direction: column;
   gap: var(--spacing-11);
+
+  height: 100%;
+  width: 100%;
 }
 
-.imgContainer {
-  height: 500px;
-  width: 500px;
-}
-.imgContainer img {
-  max-width: 100%;
+.form {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  align-items: flex-end;
+  gap: var(--spacing-7);
+
+  width: 60%;
 }
