--- a/src/components/header/header.module.css
+++ b/src/components/header/header.module.css
@@ -11,6 +11,7 @@
   background-color: var(--color-background-a80);
   backdrop-filter: blur(2px);
 
+  font-family: 'Cormorant Unicase', serif;
   z-index: 1;
 }
 
