--- a/src/style/global.css
+++ b/src/style/global.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Cormorant+Unicase:wght@400;500;600;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Lora:wght@400;500;600;700&display=swap');
 
 *,
 *::after,
@@ -25,7 +26,7 @@ html::-webkit-scrollbar {
 }
 
 body {
-  font-family: 'Cormorant Unicase', serif;
+  font-family: 'Lora', serif;
   font-weight: var(--font-weight-regular);
   line-height: var(--font-line-height-m);
   background-color: var(--color-background);
@@ -36,13 +37,14 @@ body {
 
 h2 {
   font-size: var(--font-size-xxl);
-  font-weight: var(--font-weight-bold);
+  font-weight: var(--font-weight-semi-bold);
   line-height: var(--font-line-height-xxl);
+  font-family: 'Lora', serif;
 }
 
 h3 {
   font-size: var(--font-size-m);
-  font-weight: var(--font-weight-bold);
+  font-weight: var(--font-weight-regular);
   margin-bottom: var(--spacing-6);
 }
 
