--- a/src/style/global.css
+++ b/src/style/global.css
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Cormorant+Unicase:wght@400;500;600;700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Lora:wght@400;500;600;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Martel+Sans:wght@400;600;700&display=swap');
 
 *,
 *::after,
@@ -26,7 +27,7 @@ html::-webkit-scrollbar {
 }
 
 body {
-  font-family: 'Lora', serif;
+  font-family: 'Martel Sans', sans-serif;
   font-weight: var(--font-weight-regular);
   line-height: var(--font-line-height-m);
   background-color: var(--color-background);
@@ -60,7 +61,7 @@ h3 {
 }
 
 .text:last-of-type {
-  margin-bottom: var(--spacing-7);
+  margin-bottom: var(--spacing-9);
 }
 
 .text:last-child {
