--- a/src/style/variables.css
+++ b/src/style/variables.css
@@ -2,7 +2,7 @@
   --color-background: #faf3f4;
   --color-background-a80: rgba(250, 243, 244, 0.8);
 
-  --color-text-dark: #1d0e07;
+  --color-text-dark: #4a2918;
   --color-text-light: #fff;
 
   --color-prime: #cf8083;
