global layout styling

--- a/src/pages/landing/landing.module.css
+++ b/src/pages/landing/landing.module.css
@@ -1,26 +1,5 @@
-.container {
-  display: flex;
-  flex-direction: column;
+.center {
   align-items: center;
-  gap: var(--spacing-9);
-
-  height: 100%;
-}
-
-.content {
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  align-items: center;
-  gap: var(--spacing-12);
-
-  height: 100%;
-}
-
-.buttons {
-  display: flex;
-  justify-content: flex-start;
-  align-items: center;
-  gap: var(--spacing-8);
 }
 
 .img {
