--- a/src/style/global.css
+++ b/src/style/global.css
@@ -45,8 +45,33 @@ h2 {
 
 h3 {
   font-size: var(--font-size-m);
-  font-weight: var(--font-weight-regular);
+  font-weight: var(--font-weight-bold);
   margin-bottom: var(--spacing-6);
+}
+
+.container {
+  height: 100%;
+
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  gap: var(--spacing-9);
+}
+
+.content {
+  height: 100%;
+
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  align-items: center;
+  gap: var(--spacing-12);
+}
+
+.buttonsGrp {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  gap: var(--spacing-8);
 }
 
 .text {
