--- a/src/style/variables.css
+++ b/src/style/variables.css
@@ -11,6 +11,7 @@
 
   --font-size-xxl: 4rem;
   --font-size-xl: 3.2rem;
+  --font-size-ml: 2.8rem;
   --font-size-m: 1.6rem;
 
   --font-weight-bold: 700;
