--- a/src/pages/portfolio/portfolio.module.css
+++ b/src/pages/portfolio/portfolio.module.css
@@ -12,7 +12,7 @@
 .portfolios {
   width: 100%;
   height: 100%;
-  padding: 0 var(--spacing-6);
+  padding: 0 var(--spacing-12);
 
   display: flex;
   justify-content: center;
@@ -23,8 +23,16 @@
   width: 100%;
   height: 100%;
   display: grid;
-  grid-template-rows: 1fr auto;
-  gap: var(--spacing-6);
+  grid-template-rows: 1.2fr 1fr;
+  gap: var(--spacing-8);
+}
+
+.portfolioTitle {
+  font-size: var(--font-size-ml);
+  font-weight: var(--font-weight-semi-bold);
+  text-transform: uppercase;
+  font-family: 'Lora', serif;
+  margin-bottom: var(--spacing-8);
 }
 
 .img {
@@ -33,8 +41,4 @@
   background-color: gray;
 
   border-radius: var(--boarder-radius-m);
-}
-
-.textContainer {
-  padding: 0 var(--spacing-6);
 }
