--- a/src/pages/contact/contact.module.css
+++ b/src/pages/contact/contact.module.css
@@ -4,6 +4,8 @@
   flex-direction: column;
   gap: var(--spacing-10);
 
+  padding: 0 var(--spacing-12);
+
   height: 100%;
   width: 100%;
 }
@@ -12,9 +14,10 @@
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   align-items: flex-end;
-  gap: var(--spacing-7);
+  gap: calc(var(--spacing-12) * 1.5);
+  row-gap: var(--spacing-6);
 
-  width: 60%;
+  width: 100%;
 }
 
 .message {
