--- a/src/components/carousel/carousel.module.css
+++ b/src/components/carousel/carousel.module.css
@@ -8,8 +8,6 @@
   align-items: center;
   flex-direction: column;
   gap: var(--spacing-8);
-  height: 100%;
-  width: 100%;
 }
 
 .carousel {
@@ -17,6 +15,8 @@
   grid-template-rows: 1fr auto;
   height: 100%;
   width: 100%;
+
+  border: var(--color-prime-light) solid 1px;
   border-radius: var(--boarder-radius-m);
 
   overflow: hidden;
@@ -26,6 +26,14 @@
   position: relative;
   height: 100%;
   width: 100%;
+}
+
+.carouselContent > img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  object-position: center;
+  overflow: hidden;
 }
 
 .item {
@@ -63,8 +71,10 @@
 .progessBar {
   height: 1.2rem;
   display: flex;
+  gap: var(--spacing-1);
   justify-content: space-between;
   align-items: center;
+  background-color: var(--color-prime);
 }
 
 .progessBarItem {
