--- a/src/components/page/page.module.css
+++ b/src/components/page/page.module.css
@@ -1,5 +1,5 @@
 .page {
-  height: 100vh;
+  min-height: 100vh;
   padding: calc(var(--spacing-12) * 2) var(--spacing-11) var(--spacing-9) var(--spacing-11);
 
   display: flex;
