--- a/src/components/colorGrid/colorGrid.module.css
+++ b/src/components/colorGrid/colorGrid.module.css
@@ -1,6 +1,8 @@
 .container {
-  height: 100%;
-  /* aspect-ratio: 2/1; */
+  max-height: 500px;
+  width: 100%;
+  padding: 50px;
+  aspect-ratio: 1/1;
 
   display: grid;
 
