--- a/src/components/imgBox/imgBox.module.css
+++ b/src/components/imgBox/imgBox.module.css
@@ -1,7 +1,7 @@
 .box {
+  height: 51.2rem;
   width: 100%;
   overflow: hidden;
-  background-color: #444;
 
   border: var(--color-prime-light) solid 1px;
   border-radius: var(--boarder-radius-m);
@@ -13,4 +13,10 @@
   object-fit: cover;
   object-position: center;
   overflow: hidden;
+}
+
+@media screen and (max-width: 1000px) {
+  .box {
+    height: 300px;
+  }
 }
