--- a/src/components/colorGrid/colorGrid.module.css
+++ b/src/components/colorGrid/colorGrid.module.css
@@ -1,7 +1,7 @@
 .container {
   max-height: 500px;
   width: 100%;
-  padding: 50px;
+  /* padding: 50px; */
   aspect-ratio: 1/1;
 
   display: grid;
