--- a/src/style/global.css
+++ b/src/style/global.css
@@ -41,3 +41,58 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+
+.center {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.testContent {
+  height: 100%;
+
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  gap: var(--spacing-9);
+}
+
+.grid-1-2 {
+  height: 100%;
+
+  display: grid;
+  align-items: center;
+  justify-content: center;
+  grid-template-columns: 1fr 2fr;
+  gap: var(--spacing-11);
+}
+
+@media screen and (max-width: 1000px) {
+  .grid-1-2 {
+    height: 100%;
+
+    display: flex;
+    flex-direction: column;
+    gap: var(--spacing-9);
+  }
+}
+
+.p-l-100 {
+  padding-left: 100px;
+}
+
+@media screen and (max-width: 1000px) {
+  .grid-1-2 {
+    height: 100%;
+
+    display: flex;
+    flex-direction: column;
+    gap: var(--spacing-9);
+  }
+
+  .p-l-100 {
+    padding-left: 0;
+  }
+}
